<resources>
    <string name="app_name">Mealer</string>
    <string name="weclome_message">Welcome to Mealer!</string>
    <string name="username">Username</string>
    <string name="log_in_button">Log in</string>
    <string name="register_button">Register</string>
    <string name="app_version">1.0.1beta</string>
    <string name="password">Password</string>
    <string name="mealer_image">TODO</string>
    <string name="Register_welcome_msg">Don\'t have an account yet?</string>
    <string name="Register_welcome_msg2">Select your role now!</string>
    <string name="radioButtton1">Client</string>
    <string name="radioButton2">Cook</string>
    <string name="register_confirm_button">confirm</string>
    <string name="client_lastName">Last Name</string>
    <string name="client_email">Email</string>
    <string name="client_firstName">First Name</string>
    <string name="client_address">Address</string>
    <string name="client_creditCard">Credit Card Info</string>
    <string name="client_register_button">Register</string>
    <string name="client_password">Password</string>
    <string name="cook_password">Password</string>
    <string name="cook_email">Email</string>
    <string name="cook_lastName">Last Name</string>
    <string name="cook_firstName">First Name</string>
    <string name="cook_register_button">Register</string>
    <string name="cook_voidCheque">Void Cheque</string>
    <string name="cook_address">Address</string>
    <string name="cook_description">Short description</string>
    <string name="clientCheckBox">Client</string>
    <string name="cookCheckBox">Cook</string>
    <string name="adminCheckBox">Admin</string>
    <string name="userName">Email</string>
    <string name="adminWelcome">TextView</string>
    <string name="adminWelcomeMessage" />
    <string name="clients_complaints">Clients\' complaints</string>
    <string name="client_prompt">Client:</string>
    <string name="to_cook_prompt">To Cook:</string>
    <string name="complaint_client_name">Client Name:</string>
    <string name="complaint_cook_name">Cook Name:</string>
    <string name="complaint_msg">Complaint Description</string>
    <string name="dismissBtn">dismiss</string>
    <string name="suspend_t_Btn">suspend---T</string>
    <string name="suspend_p_Btn">suspend---P</string>
    <string name="check_complaintsBtn">complaints</string>
    <string name="sorry_your_count_has_been_suspend_from_today_until_december_21_22_2023">Sorry, your count has been suspend from today, until December 21.22, 2023</string>
    <string name="sorry_your_account_has_been_permanently_suspended_please_register_a_new_one">Sorry, your account has been permanently suspended, please register a new one.</string>
    <string name="suspendTime">How long do you want to suspend</string>
    <string name="suspendTimeButton">confirm</string>
    <string name="cookSuspendTime" />
    <string name="suspendCookID">TextView</string>
    <string name="logInCookID">TextView</string>
    <string name="suspend_date_hint">Suspend date?</string>
    <string name="ratingBar">rating</string>
    <string name="you_have_signed_in_as_a">you have signed in as a</string>
    <string name="ordered">ordered</string>
    <string name="order">order</string>
    <string name="welcome">Welcome,</string>
    <string name="log_off">Log Off</string>
</resources>